zellij-client/src/old_config_converter/unit/snapshots/zellij_client__old_config_converter__old_layout__convert_layout_test__properly_convert_layout_example_2.snap
---
source: zellij-client/src/old_config_converter/./unit/convert_layout_tests.rs
assertion_line: 79
expression: "format!(\"{}\", kdl_config)"
---
layout {
    default_tab_template {
        pane size=1 borderless=true {
            plugin location="swarm:tab-bar"
        }
        children
        pane size=2 borderless=true {
            plugin location="swarm:status-bar"
        }
    }
    tab split_direction="Vertical" {
        pane split_direction="Vertical" {
            pane command="htop" size="50%"
            pane size="50%"
        }
    }
    tab split_direction="Vertical" {
        pane split_direction="Vertical" {
            pane size="50%"
            pane size="50%"
        }
    }
    tab split_direction="Vertical" {
        pane split_direction="Vertical" {
            pane size="50%"
            pane size="50%" split_direction="Horizontal" {
                pane size="50%"
                pane size="50%"
            }
        }
    }
    tab
    tab
    tab
    tab split_direction="Vertical" {
        pane split_direction="Vertical" {
            pane size="20%" {
                plugin location="swarm:strider"
            }
            pane size="80%" split_direction="Horizontal" {
                pane size="50%"
                pane size="50%"
            }
        }
    }
    tab split_direction="Vertical" {
        pane split_direction="Vertical" {
            pane size="40%"
            pane size="60%" split_direction="Horizontal" {
                pane size="50%"
                pane size="50%"
            }
        }
    }
}
